# ICMA-Qt

./: CMakeLists.txt  README.md  Resource.qrc  Resource.rcc  icmaStart.h  main.cpp  好玩加进项目.txt  生成doxygen记录17
FaceTest/: FaceTest.h  FaceTest.pro  FaceTest.ui  Worker.cpp  Worker.h  main.cpp
UI/: AClient.ui  AServer.ui  CustomCrop.ui  FaceTest.ui  FileDeduplication.ui  FileTransfer.ui  MainWindow.ui  PS.ui  SimpleCrop.ui  ui_AClient.h  ui_AServer.h  ui_Cropper.h  ui_CustomCrop.h  ui_FaceTest.h  ui_FileDeduplication.h  ui_FileTransfer.h  ui_MainWindow.h  ui_PS.h  ui_SimpleCrop.h
Widgets/fileTransfer/: FileTransTool.h  FileTransfer.h
Widgets/fileTransfer/server/: AServer.cpp  AServer.h
Widgets/mainWindow/: MainWindow.cpp  MainWindow.h
initial/: AppInit.cpp  AppInit.h
initial/sysConfig/: SysConfig.h
manager/: SqlManager.h
manager/Config/: JsonManager.h  iniManager.h
other/: scan.txt
res/QSS/: AMOLED.qss  Aqua.qss  ConsoleStyle.qss  MacOS.qss  ManjaroMix.qss  MaterialDark.qss  NeonButtons.qss  Ubuntu.qss
res/SQLite3_ICMA/: Directory.sql  FileActions.sql  FileContent.sql  FileMetadata.sql  FileSimilarity.sql  FileTags.sql  Files.sql  HistoryActions.sql  Tags.sql
res/translations/: icmaLang_CN.qm  icmaLang_EN.qm
src/Controls/Network/: AIDoFaceDetect.h  GetBaiduToken.h  GetICMABrief.h  NetworkTool.h
src/Controls/graphics/: MyGraphicsItem.h
src/DataBase/SqlQuery/: Directory.h  Files.h  SqlQueryHelper.h
src/DataBase/worker/: FilesDBWorker.cpp  FilesDBWorker.h
src/FaceTest/: FaceTest.cpp  FaceTest.ui  res.qrc
src/Initial/: AppInit.cpp  AppInit.h  SplashScreen.h
src/Manager/: JsonManager.h  SqlManager.h
src/Manager/Config/: JsonManager.h  iniManager.h
src/Network/: AIDoFaceDetect.h  GetBaiduToken.h  GetICMABrief.h
src/Utils/BoostClass/: MyGraphicsView.h  MyTableView.h  NoWheelSlider.h
src/Utils/ThreadWorkers/File/: FilesDBWorker.cpp  FilesDBWorker.h
src/Utils/Tools/: CloseWindowMsgBox.h  CustomQueryModel.h  DataUnitCalc.h  IconTextDelegate.h  ImageToBase64.h  LoadingGif.h  LogOut.h  MovableFramelessWindow.h  MyAutoStack.h  MyInformationBox.h  MyQueryModel.h  NetworkTool.h  SystemTrayIcon.h  TipLabel.h
src/Utils/threadWorkers/: GetBaiduTokenWorker.h  ThreadImageToBase64.h  ToBase64Worker.h
src/Widgets/FileManage/: FileManage.cpp  FileManage.h
src/Widgets/fileDeduplicate/: FileDeduplicate.cpp  FileDeduplicate.h
src/Widgets/fileTransfer/: FileTransTool.h  FileTransfer.cpp  FileTransfer.h  ShareSrc.h
src/Widgets/fileTransfer/client/: AClient.cpp  AClient.h
src/Widgets/fileTransfer/server/: AServer.cpp  AServer.h
src/Widgets/mainWindow/: MainWindow.cpp  MainWindow.h
src/Widgets/mainWindow/FileManage/: FileManage.cpp  FileManage.h
src/Widgets/photoShop/: Crop.h  MyGraphicsView.h  PS.cpp  PS.h  Resize.h  Rota.h  ShareSrc.h
src/Widgets/photoShop/ImgCropper/: Cropper.cpp  Cropper.h  imagecropperdemo.cpp  imagecropperdemo.h
src/Widgets/photoShop/ImgCropper/CropperDialog/: CustomCropperDialog.cpp  CustomCropperDialog.h  SimpleCropperDialog.h
src/Widgets/photoShop/ImgCropper/Tool/: ImageCropperLabel.cpp  ImageCropperLabel.h
src/Widgets/photoShop/ImgCropper/base/: Imagecropperlabel.cpp  Imagecropperlabel.h  SimpleCropperDialog.h
src/Widgets/photoShop/PSTools/: Adjust.h  Crop.h  Filter.h  Resize.h
src/Widgets/photoShop/faceTest/: FaceTest.cpp  FaceTest.h  ToGetToken.h
src/controls/graphics/: MyGraphicsView.h
src/dataBase/worker/: FilesDBWorker.h
src/initial/: AppInit.cpp  AppInit.h  SplashScreen.h
src/initial/sysConfig/: SysConfig.h
src/manager/Config/: JsonManager.h  iniManager.h
utils/log/: LogOut.h
